# C_base_cource

./: CMakeLists.txt  README.md  main.c  main.cpp
task1/: CMakeLists.txt  main.c  task1.c
task2/: CMakeLists.txt  main.c  task2.c
task3/: CMakeLists.txt  main.c  task3.c
task4/: CMakeLists.txt  main.c  task4.c
task5/: CMakeLists.txt  main.c  task5.c
task6/: CMakeLists.txt  task6.c
task7/: CMakeLists.txt  task7.c
